--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="OpenTriage - AI-powered issue triage for open-source repositories" />
         <title>OpenTriage | AI Issue Triage</title>
+        <link rel="icon" href="logo.png">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
