--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="OpenTriage - AI-powered issue triage for open-source repositories" />
-        <title>OpenTriage | AI Issue Triage</title>
+        <title>OpenTriage</title>
         <link rel="icon" href="logo.png">
     </head>
     <body>
